--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,21 +1,21 @@
 @font-face {
     font-family: 'Inter-semibold';
-    src: url('Inter-semibold.eot');
-    src: url('Inter-semibold.eot?#iefix') format('embedded-opentype'),
-        url('Inter-semibold.woff2') format('woff2'),
-        url('Inter-semibold.woff') format('woff'),
-        url('Inter-semibold.svg#Inter-Regular') format('svg');
+    src: url('../font/Inter-semibold.eot');
+    src: url('../font/Inter-semibold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Inter-semibold.woff2') format('woff2'),
+        url('../font/Inter-semibold.woff') format('woff'),
+        url('../font/Inter-semibold.svg#Inter-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
     font-family: 'Inter';
-    src: url('Inter-Regular.eot');
-    src: url('Inter-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Inter-Regular.woff2') format('woff2'),
-        url('Inter-Regular.woff') format('woff'),
-        url('Inter-Regular.svg#Inter-Regular') format('svg');
+    src: url('../font/Inter-Regular.eot');
+    src: url('../font/Inter-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/Inter-Regular.woff2') format('woff2'),
+        url('../font/Inter-Regular.woff') format('woff'),
+        url('../font/Inter-Regular.svg#Inter-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
