--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -10,7 +10,7 @@
     font-display: swap;
 }
 @font-face {
-    font-family: 'Inter';
+    font-family: 'Inter-regular';
     src: url('../font/Inter-Regular.eot');
     src: url('../font/Inter-Regular.eot?#iefix') format('embedded-opentype'),
         url('../font/Inter-Regular.woff2') format('woff2'),
