--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Inter-semibold';
-    src: url('../font/Inter-semibold.eot');
-    src: url('../font/Inter-semibold.eot?#iefix') format('embedded-opentype'),
-        url('../font/Inter-semibold.woff2') format('woff2'),
-        url('../font/Inter-semibold.woff') format('woff'),
-        url('../font/Inter-semibold.svg#Inter-Regular') format('svg');
+    src: url('../font/Inter-Semibold.eot');
+    src: url('../font/Inter-Semibold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Inter-Semibold.woff2') format('woff2'),
+        url('../font/Inter-Semibold.woff') format('woff'),
+        url('../font/Inter-Semibold.svg#Inter-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
