--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,14 +1,15 @@
 @font-face {
     font-family: 'Inter-semibold';
-    src: url('../font/Inter-SemiBold.eot');
-    src: url('../font/Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('../font/Inter-SemiBold.woff2') format('woff2'),
-        url('../font/Inter-SemiBold.woff') format('woff'),
-        url('../font/Inter-SemiBold.svg#Inter-Regular') format('svg');
-    font-weight: normal;
+    src: url('Inter-SemiBold.eot');
+    src: url('Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('Inter-SemiBold.woff2') format('woff2'),
+        url('Inter-SemiBold.woff') format('woff'),
+        url('Inter-SemiBold.svg#Inter-SemiBold') format('svg');
+    font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
+
 @font-face {
     font-family: 'Inter-regular';
     src: url('../font/Inter-Regular.eot');
