--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'Inter-semibold';
-    src: url('Inter-SemiBold.eot');
-    src: url('Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('Inter-SemiBold.woff2') format('woff2'),
-        url('Inter-SemiBold.woff') format('woff'),
-        url('Inter-SemiBold.svg#Inter-SemiBold') format('svg');
+    src: url('../font/Inter-SemiBold.eot');
+    src: url('../font/Inter-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Inter-SemiBold.woff2') format('woff2'),
+        url('../font/Inter-SemiBold.woff') format('woff'),
+        url('../font/Inter-SemiBold.svg#Inter-SemiBold') format('svg');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
